# Klaus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  klaus_config.json  partitions.csv  sdkconfig.defaults
components/battery/: CMakeLists.txt  battery.c  battery.h
components/bq25896/: CMakeLists.txt  bq25896.c  bq25896.h
components/bq27220/: CMakeLists.txt  bq27220.c  bq27220.h  bq27220_registers.h
components/clock/: CMakeLists.txt  clock.c  clock.h
components/config/: CMakeLists.txt  config.c  config.h
components/display/: CMakeLists.txt  display.c  display.h
components/gui/: CMakeLists.txt  gui.c  gui.h  gui_commons.h  idf_component.yml  popup.c  popup.h  style.c  style.h  view_commons.c  view_commons.h
components/gui/images_c/: charge_15.c  klaus_112x85.c  klaus_afraid_104x85.c  klaus_bored_102x85.c  klaus_dab_126x85.c  klaus_fuck_100x85.c  sd_15.c  wifi_nok_15.c  wifi_ok_15.c
components/gui/screens/: splash_screen.h  status_bar.h
components/gui/views/: CMakelists.txt  deauth_view.c  deauth_view.h  main_menu_view.c  main_menu_view.h  rfid_menu_view.c  rfid_menu_view.h  scan_view.c  scan_view.h  splash_view.c  splash_view.h  status_bar.h  test_view.c  test_view.h  tools_view.c  tools_view.h  wifi_menu_view.c  wifi_menu_view.h
components/peripherals/: CMakeLists.txt  peripherals.h
components/pn532/: CMakeLists.txt  pn532.c  pn532.h  pn532_registers.h
components/sd/: CMakeLists.txt  sd.c  sd.h
components/userinputs/: CMakeLists.txt  idf_component.yml  userinputs.c  userinputs.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h  wifi_attacks.c  wifi_attacks.h
components/wsl_bypasser/: CMakeLists.txt  wsl_bypasser.c
components/wsl_bypasser/interface/: wsl_bypasser.h
main/: CMakeLists.txt  battery.c  battery.h  config.c  config.h  display.c  display.h  idf_component.yml  keybtn.c  keybtn.h  knob.c  knob.h  main.c
main/images_c/: battery_15.c  vaultboy_85.c
